fix: some UI fix and scrollbar css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,24 @@ body {
   @apply bg-slate-200
 }
 
+.scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  @apply bg-slate-100
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
+  @apply bg-slate-200
+}
+
+.invisible-scrollbar {
+  scrollbar-width: none;
+}
+
+.invisible-scrollbar::-webkit-scrollbar {
+  display: none;
+}
